Minor changes to JSON element utilities